--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,3 @@
-# Compiled Object files
-*.slo
-*.lo
+*~
+*.swp
 *.o
-
-# Compiled Dynamic libraries
-*.so
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
