--- a/rust/ls/Cargo.toml
+++ b/rust/ls/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ls"
 version = "0.1.0"
-authors = ["ubuntu"]
+authors = ["Bjoern Doebel <bjoern.doebel@gmail.com"]
 
 [dependencies]
 clap = {version = "~2.19.0", features = ["yaml"]}
