Use fern logger

--- a/rust/ls/src/cli.yml
+++ b/rust/ls/src/cli.yml
@@ -7,3 +7,6 @@ args:
         short: l
         long: long
         takes_value: false
+    - verbose:
+        long: verbose
+        takes_value: false
