--- a/rust/ls/Cargo.toml
+++ b/rust/ls/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["Bjoern Doebel <bjoern.doebel@gmail.com"]
 
 [dependencies]
 clap = {version = "~2.19.0", features = ["yaml"]}
+log = "0.3"
+fern = "0.4"
+chrono = "0.4.0"
